@@ -80,7 +80,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:4173"));
+        // configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:4173"));
+        configuration.setAllowedOriginPatterns(List.of("*")); // Allow all origins
+
 
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
